fix preview overflow, (oops), add readme

--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -30,4 +30,5 @@ textarea{
   width: 800px;
   margin: 0 auto;
   padding: 10px;
+  overflow: scroll;
 }
